# nono

./: .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  FEEDBACK.md  IMPLEMENTATION.md  LICENSE  Makefile  PLAN.md  README.md  RELEASING.md  REVIEW.md  SECURITY.md  SPEC.md  TASK.md  TEST_RESULTS.md  WSL2_CHANGELOG.md  build.rs  cliff.toml  code-review-findings-2026-02-16.md  mint.json  mkdocs.yml
.github/ISSUE_TEMPLATE/: onboarding_issue.yml
.github/scripts/: check-cli-doc-flags.sh
.github/workflows/: ci.yml  image-build.yml  nix-integration.yml  pr-label.yml  pr-lint.yml  release.yml  sign-instruction-files.yml
.swarm/: status.json
bindings/c/: Cargo.toml  build.rs  cbindgen.toml
bindings/c/include/: nono.h
bindings/c/src/: capability_set.rs  fs_capability.rs  lib.rs  query.rs  sandbox.rs  state.rs  types.rs
bindings/node/: Cargo.toml  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml  README.md  build.rs
crates/nono-cli/data/: example-network-policy.json  network-policy.json  nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/src/: app_runtime.rs  audit_commands.rs  capability_ext.rs  cli.rs  cli_bootstrap.rs  command_blocking_deprecation.rs  exec_strategy.rs  execution_runtime.rs  hooks.rs  instruction_deny.rs  learn.rs  learn_runtime.rs  main.rs  network_policy.rs  output.rs  package.rs  package_cmd.rs  policy.rs  policy_cmd.rs  profile_runtime.rs  profile_save_runtime.rs  protected_paths.rs  pty_proxy.rs  query_ext.rs  registry_client.rs  rollback_commands.rs  rollback_runtime.rs  rollback_ui.rs  sandbox_log.rs  sandbox_prepare.rs  setup.rs  startup_prompt.rs  supervised_runtime.rs  terminal_approval.rs  theme.rs  trust_cmd.rs  trust_intercept.rs  trust_scan.rs  undo_commands.rs  undo_ui.rs
crates/nono-cli/src/config/: embedded.rs  mod.rs  user.rs
crates/nono-cli/src/exec_strategy/: supervisor_linux.rs
crates/nono-cli/src/profile/: builtin.rs  mod.rs
crates/nono-cli/tests/: config_flag.rs  env_vars.rs  manifest_roundtrip.rs  policy_cmd.rs
crates/nono-proxy/: Cargo.toml
crates/nono-proxy/src/: config.rs  credential.rs  external.rs  filter.rs  reverse.rs  route.rs  server.rs
crates/nono/schema/: capability-manifest.schema.json
crates/nono/src/: capability.rs  diagnostic.rs  error.rs  lib.rs  manifest.rs  manifest_convert.rs  query.rs  state.rs
crates/nono/src/sandbox/: linux.rs  macos.rs  mod.rs
crates/nono/src/supervisor/: socket.rs  types.rs
crates/nono/src/trust/: bundle.rs  dsse.rs  mod.rs  policy.rs  types.rs
crates/nono/src/undo/: exclusion.rs  merkle.rs  mod.rs  object_store.rs  snapshot.rs  types.rs
crates/nono/tests/: manifest_types.rs
data/: security-lists.toml
data/profiles/: cargo-build.toml  claude-code-secretive.toml  claude-code.toml  openclaw.toml  opencode.toml
docker/: Dockerfile
docs/: docs.json  index.md  installation.md  network-filtering.md  troubleshooting.md
docs/cli/clients/: claude-code.mdx  openclaw.mdx  opencode.mdx  quickstart.mdx
docs/cli/development/: testing.mdx
docs/cli/features/: credential-injection.mdx  execution-modes.mdx  network-proxy.mdx  networking.mdx  package-publishing.mdx  profile-authoring.mdx  profiles-groups.mdx  supervisor.mdx  trust.mdx
docs/cli/getting_started/: installation.mdx  quickstart.mdx
docs/cli/internals/: application.mdx  capability-manifest.mdx  containers.mdx  index.mdx  security-model.mdx  signing.mdx  wsl2-feature-matrix.mdx  wsl2.mdx
docs/cli/security/: containers.mdx  index.mdx  profiles.mdx  seatbelt.mdx
docs/cli/usage/: examples.mdx  flags.mdx  index.mdx  secrets.mdx  troubleshooting.mdx
docs/clients/: claude-code.mdx  index.mdx  openclaw.mdx  opencode.mdx  quickstart.mdx
docs/development/: index.mdx  iokit-support-plan.md
docs/getting_started/: installation.mdx
docs/profiles/: built-in.md  index.md  openclaw.md  openclaw.mdx
docs/security/: containers.mdx  index.md  index.mdx  landlock.md  landlock.mdx  profiles.mdx  seatbelt.md  seatbelt.mdx  signing.mdx  vs-application.md  vs-containers.mdx
docs/usage/: examples.md  examples.mdx  flags.md  flags.mdx  index.md  index.mdx  secrets.md  secrets.mdx  troubleshooting.mdx
scripts/: monitor-auth.sh  prepare-release.sh  run-all-tests.sh  test-linux.sh  wsl-dev.sh
src/: capability.rs  cli.rs  error.rs  exec_strategy.rs  hooks.rs  learn.rs  main.rs  output.rs  setup.rs
src/config/: embedded.rs  mod.rs  security_lists.rs  user.rs  verify.rs  version.rs
src/profile/: builtin.rs  mod.rs
src/sandbox/: linux.rs  macos.rs  mod.rs
tests/: run_integration_tests.sh  run_nix_integration_tests.sh
tests/integration/: test_binary_exec.sh  test_commands.sh  test_edge_cases.sh  test_env_sanitization.sh  test_fs_access.sh  test_network.sh  test_nix_paths.sh  test_override_deny.sh  test_profiles.sh  test_sensitive_paths.sh  test_shell.sh  test_silent_output.sh  test_system_paths.sh  test_trust_cli.sh  test_wsl2.sh
tests/lib/: test_helpers.sh
