[workspace]
resolver = "2"
members = [
    "crates/nono",
    "crates/nono-cli",
    "bindings/python",
    "bindings/node",
    "bindings/c",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
authors = ["Luke Hinds"]
license = "Apache-2.0"
repository = "https://github.com/lukehinds/nono"
homepage = "https://github.com/lukehinds/nono"

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Logging
tracing = "0.1"

# Secure credential handling
zeroize = { version = "1", features = ["alloc"] }

# Testing
tempfile = "3"

# Python bindings (PyO3)
pyo3 = { version = "0.24", features = ["abi3-py39"] }

# Node.js bindings (napi-rs)
napi = { version = "3", default-features = false, features = ["napi9"] }
napi-derive = "3"
napi-build = "2"

# C FFI bindings
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
