[package]
name = "nono-rs"
version = "0.4.0"
edition = "2021"
rust-version = "1.74"
authors = ["Luke Hinds"]
description = "The opposite of YOLO - a capability shell for AI agents"
license = "Apache-2.0"
repository = "https://github.com/always-further/nono"
homepage = "https://github.com/always-further/nono"
documentation = "https://docs.rs/nono-rs"
readme = "README.md"
keywords = ["sandbox", "security", "capability", "agent", "landlock"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*", "data/**/*", "build.rs", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "1.0"
serde = { version = "1", features = ["derive"] }
xdg-home = "1.3.0"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Secure credential handling
zeroize = { version = "1", features = ["alloc"] }

# Signature verification
minisign-verify = "0.2"

# Date/time for version tracking
chrono = { version = "0.4", features = ["serde"] }

# JSON for version state file
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Output styling
colored = "3"
rand = "0.10"

# Path resolution (for async-signal-safe exec)
which = "8"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.31", features = ["process", "signal", "fs", "user"] }
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["process", "signal", "fs", "user"] }
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nono"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
