[workspace]
resolver = "2"
members = [
    "crates/nono",
    "crates/nono-cli",
    "bindings/c",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
authors = ["Luke Hinds"]
license = "Apache-2.0"
repository = "https://github.com/always-further/nono"
homepage = "https://github.com/always-further/nono"

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Logging
tracing = "0.1"

# Secure credential handling
zeroize = { version = "1", features = ["alloc"] }

# Hashing
sha2 = "0.10"

# Filesystem walking
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Testing
tempfile = "3"

# C FFI bindings
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
