[package]
name = "nono-napi"
version.workspace = true
edition.workspace = true
rust-version = "1.77"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node.js/TypeScript bindings for nono capability-based sandboxing library"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nono = { path = "../../crates/nono" }
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
