[package]
name = "nono-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for nono capability-based sandboxing library"
publish = false

[lib]
name = "nono_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
nono = { path = "../../crates/nono" }
pyo3.workspace = true
