[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "nono-py"
version = "0.3.0"
description = "Python bindings for nono capability-based sandboxing"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Luke Hinds" }]
keywords = ["sandbox", "security", "capability", "landlock", "seatbelt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security",
]

[tool.maturin]
features = ["pyo3/extension-module"]
