[package]
name = "nono-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for nono capability-based sandbox"

[[bin]]
name = "nono"
path = "src/main.rs"

[dependencies]
nono = { version = "0.1", path = "../nono" }
clap = { version = "4", features = ["derive"] }
colored = "3"
similar = "2"
rand = "0.10"
which = "8"
toml = "1.0"
xdg-home = "1.3.0"
dirs = "6"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
minisign-verify = "0.2"

sha2.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["process", "signal", "fs", "user"] }
landlock = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["process", "signal", "fs", "user"] }

[build-dependencies]
toml = "1.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
